tests/should_fail/tokens_new_not_in_main.rs
extern crate creusot_contracts;
use creusot_contracts::ghost::local_invariant::Tokens;

pub fn foo() {
    let _ = Tokens::new();
}
