tests/should_fail/tokens_new_not_in_main.stderr
error: creusot_contracts::ghost::local_invariant::Tokens::<'_>::new can only be called in `main`
 --> tokens_new_not_in_main.rs:5:13
  |
5 |     let _ = Tokens::new();
  |             ^^^^^^^^^^^^^

error: aborting due to 1 previous error

